--- a/Assets/Stash.DemoApp/UI Toolkit/StoreUI/StoreUI.uxml
+++ b/Assets/Stash.DemoApp/UI Toolkit/StoreUI/StoreUI.uxml
@@ -177,6 +177,9 @@
                             </ui:VisualElement>
                         </ui:VisualElement>
                     </ui:VisualElement>
+                    <ui:VisualElement class="settings-option-row settings-option-row-column">
+                        <ui:Button name="open-test-card-button" text="Open Test Card" class="test-card-button" />
+                    </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
